# agent-protocol

./: .gitignore  README.md  openapi.json
.github/actions/uv_setup/: action.yml
.github/workflows/: release.yml
client-python/: README.md
client-python/.openapi-generator/: FILES
client-python/ap_client/: __init__.py  api_client.py
client-python/ap_client/api/: runs_api.py
client-python/ap_client/models/: __init__.py  goto.py  message.py  resume.py  run.py  run_resume.py  run_resume_stream.py  run_update.py  run_update_command.py  send.py  stream_mode1.py  update.py
client-python/docs/: Goto.md  Resume.md  Run.md  RunResume.md  RunResumeStream.md  RunStream.md  RunUpdate.md  RunUpdateCommand.md  RunsApi.md  Send.md  StreamMode1.md  Update.md
client-python/test/: test_goto.py  test_resume.py  test_run_resume.py  test_run_resume_stream.py  test_run_update.py  test_run_update_command.py  test_send.py  test_stream_mode1.py  test_update.py
prompts/: hurl.md
server/: mcp_server.py  pyproject.toml
server/ap_server/: models.py
server/ap_server/routers/: agents.py  runs.py  store.py  threads.py
streaming/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  protocol.cddl
streaming/js/: README.md  package.json  protocol.ts
streaming/py/: README.md  pyproject.toml
streaming/scripts/: fixup.py
tooling/: Makefile  pyproject.toml
tooling/ap_tooling/: __init__.py
