[tool.poetry]
name = "ap-tooling"
version = "0.1.0"
description = ""
authors = ["Nuno Campos <nuno@langchain.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ap_tooling" }]  # Adjust if necessary

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi-code-generator = ">=0.5.2,<0.6.0"
autoflake = ">=2.3.1,<3.0.0"
ruff = ">=0.9.4,<0.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"