[project]
name = "ap-tooling"
version = "0.1.0"
description = ""
authors = [
    {name = "Nuno Campos",email = "nuno@langchain.dev"},
    {name = "Will Fu-Hinthorn",email = "will@langchain.dev"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi-code-generator (>=0.5.2,<0.6.0)",
    "click (>=8.1,<8.2)",
    "autoflake (>=2.3.1,<3.0.0)",
    "ruff (>=0.9.4,<0.10.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["ap_tooling"]
