[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-protocol"
description = "Python bindings for the LangChain agent streaming protocol"
license = { text = "MIT" }
readme = "README.md"
version = "0.0.13"
requires-python = ">=3.10.0,<4.0.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typing-extensions>=4.7.0,<5.0.0"]

[project.urls]
Homepage = "https://github.com/langchain-ai/agent-protocol/tree/main/streaming"
Repository = "https://github.com/langchain-ai/agent-protocol"
Issues = "https://github.com/langchain-ai/agent-protocol/issues"
